--- a/page1.html
+++ b/page1.html
@@ -225,7 +225,7 @@
     <div class="container">
         <div class="row justify-content-center">
 
-            <div class="card p-3 col-12 col-md-6 col-lg-4">
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="media">
                     <div class="card-img pr-2">
                         <span class="mbri-bootstrap mbr-iconfont"></span>
@@ -240,7 +240,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-4">
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="media"> 
                     <div class="card-img pr-2">
                         <span class="mbri-touch mbr-iconfont"></span>
@@ -255,7 +255,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-4">
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="media">
                     <div class="card-img pr-2">
                         <span class="mbri-responsive mbr-iconfont"></span>
@@ -270,7 +270,21 @@
                 </div>
             </div>
 
-            
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
+                <div class="media">
+                    <div class="card-img pr-2">
+                        <span class="mbri-desktop mbr-iconfont"></span>
+                    </div>
+                    <div class="card-box media-body">
+                        <h4 class="card-title py-3 mbr-fonts-style display-7">
+                            Unlimited Sites
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                           Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -283,7 +297,7 @@
     <div class="container">
         <div class="row justify-content-center">
 
-            <div class="card p-3 col-12 col-md-6 col-lg-4">
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="media">
                     <div class="card-img pr-2">
                         <span class="mbri-bootstrap mbr-iconfont"></span>
@@ -298,7 +312,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-4">
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="media"> 
                     <div class="card-img pr-2">
                         <span class="mbri-touch mbr-iconfont"></span>
@@ -312,7 +326,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-4">
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="media">
                     <div class="card-img pr-2">
                         <span class="mbri-responsive mbr-iconfont"></span>
@@ -327,7 +341,21 @@
                 </div>
             </div>
 
-            
+            <div class="card p-3 col-12 col-md-6 col-lg-3">
+                <div class="media">
+                    <div class="card-img pr-2">
+                        <span class="mbri-desktop mbr-iconfont"></span>
+                    </div>
+                    <div class="card-box media-body">
+                        <h4 class="card-title py-3 mbr-fonts-style display-7">
+                            Unlimited Sites
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                           Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -432,7 +460,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="cbuoX1OxJwPbsVyLU6qrnLs2KnaRbFziG2rDgcs26AltJkS34mVYl8ni65NCJ/CrdX9eIBMnKZAGdohwAo5/ydeViS0oYCumjd0pMRDWksA6jqybQz3+HfSroymHD9xz" data-form-email="true">
+                        <input type="hidden" value="FyyvoEY2EpM1GdF471iwcGii2++9HUmO6PZrbpVySdWT5cwyZYpQSN4plgETqWPmD6tYnJH7V1xT84yk75kvIpZUrJrNpHRo6EXSOLyxe4Iqxu8jZm8H4ErLlu+rKEy4" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-j">
                         </div>
