--- a/page1.html
+++ b/page1.html
@@ -53,7 +53,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Training</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
                         Research</a></li>
                 <li class="nav-item">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
+<section class="engine"><a href="https://mobirise.me/d">website maker</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
 
     
 
@@ -460,7 +460,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="FnbiJd6/htwfy99zxRw0v28yjA9VrLKsLL5BYYvZeVYu9ZE1lUKtHZeyBPbe0ZqHQlE4BxJ+rN3tWf4yYrvS4TIA15/spz/05G134qiQ4kRJE6bimNCjxs66yU+CHlzJ" data-form-email="true">
+                        <input type="hidden" value="Dkfd5IAepVlmoV0IcL6KbwxQgi7pSVX8UztqSvhpivDFsL7Y3Y6QpAvvvRm2zmJ5jYEci+Z14O3RFIugEDzE0IVA4bZf0fCqV/tDM4BX90jVjDfMibAoCHp5gSMVjQ8S" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-j">
                         </div>
