--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Training</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
                         Research</a></li>
                 <li class="nav-item">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/a">Mobirise review</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
+<section class="engine"><a href="https://mobirise.me/o">one page site templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
 
     
 
@@ -149,7 +149,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="Eb9lKOMNh20ek3Zgv/7hvxXQI5ACoF07PAncsrrX0f4zNdsQmEdGbAHfLSgQBFjLyZkJFmc6yRHfhhMHVlEwdGoWy0ecf/6dbnHZxyws1pFTypa//o2XCoAk7uJnJz8e" data-form-email="true">
+                        <input type="hidden" value="vvUmTUm9ADP/nTblVqbHam5BCvZRHCeHWNWpVvGrlvk5EfkjzhUWn36oQkWawnjYAzSLSYkQ9qB59Acj3Rnu3Ctm/4Al2XKuLNLEZjHfEx01trMyjHABYkwfD/cF3xec" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-r">
                         </div>
