--- a/page3.html
+++ b/page3.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="mbr-section form1 cid-qWsNBZy9jh" id="form1-u">
+<section class="engine"><a href="https://mobirise.me/e">make a website</a></section><section class="mbr-section form1 cid-qWsNBZy9jh" id="form1-u">
 
     
 
@@ -84,7 +84,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0P1KAaNtEAb6ILyn5ie0Jz5ZrfPJfC5RfwDtEVtJXyKdlAJCi0zJcKEgefLyznt8dUa/2iFWhJATrRaJOZP8ZkSyyflU+j3RHygSasAZqToxTjdlOHdkjgNI70KSKEA8" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TP/d+LvtbrCj3n5wKT8NLR84J9WUuuJhGDt8PAwBkad7POeUmtLbrUpq9kykxc6RuOylhDmk6PDuDetfw0GR4/zVZOKRy2iIe5GmwJHwRUzwpTroWP0e9SyEnmWA2hZC" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -157,7 +157,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="sFhM7U2zrZSOm+IkR9+y3s+aATriys2fsTQD+RTk5Ho4VNQwCkb8zLjgAuUOGjvgaoPrsflu5Xt6kQa3sT3FI3EuCB80gufYtrxCHtYu69+H+nBn6eY3B57aZXg6FfBK" data-form-email="true">
+                        <input type="hidden" value="SfWk2lxY0r8e8EEHU4K2kJjTNVpF65ylw0pPoAJz46gVJFD2hYF435vSrszUpK8rRWU06pLoIvfSjrI0XUIiFCXDeZ/2jmhWcm0ln78VFRQhK9+ymurt2M6as96LuQ05" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-26">
                         </div>
