--- a/page8.html
+++ b/page8.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">html web templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -237,7 +237,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wSqG2vBopxxNERyLikon97aYCAz2ohUxa+5hS0eSER+jXyd0hWDLeVj4t7Yqsly4KblfFqG32slWPdPSJua/HF53qo2/3SqCJpkg2VkbLzNe74Np4e9i+BTLf0pWkvQn" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sOOniPPMTGyjAgMIbrKLRQhkDoiPEzb09+GEh/yP1JgCTkmplwn3c0DRLsB3iedxy/zvOVEPJdMakhyL/LvRRmaqgQZ7z3GUL3GrY6X2gAbEnyV1GR9JHwP3ry2GSGU5" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="N2dzf6cjmr7S5/napP7miVKF+I+yIlAbiaYhf/SjyFjSIgBmzErrxOAGoUxgmK6/EX2gV40rzQCI0bWSx3hgki9gBTsF08yBusf77vUBrzOXVdDTpDSa6Etfi4p+y7N3" data-form-email="true">
+                        <input type="hidden" value="ppY2zoNqvjh/sUHhsv4lNngB802L58OYovtQkw8AcBReeZTH+iL/pB8JjzEkQSb1HpMk0GzsdwsTT0IVAYtlMhLsvCHRJ1ft10dQvu11YyLe531Ut7V6IfMjLah8VX09" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
