--- a/page4.html
+++ b/page4.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
+<section class="engine"><a href="https://mobirise.me/q">responsive website templates</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
 
     
 
@@ -108,7 +108,7 @@
                         <h4 class="card-title mbr-fonts-style display-7">IOT</h4>
                         
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page5.html" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page7.html" class="btn btn-primary display-4">
                             View</a></div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/0119.jpg" alt="Mobirise">
+                        <img src="assets/images/016.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -172,7 +172,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/0220.jpg" alt="Mobirise">
+                        <img src="assets/images/027.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -229,7 +229,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="7R1+lPDzTJdM2vhJIZIr412HTVlyKEsyHBQcKQ0kK5WWryriePGc+QIVXtb5qDp5sje3O8Jk3RYhlHFEOT0cjOZisSBld8WJCsUTEcehQ8MV58e6HDdJT3pLUl/31jz4" data-form-email="true">
+                        <input type="hidden" value="XSZXVtcwp31BxIsP9+FdaGMIgTWUKW/K8XrGWDwLnqlZ/fwv9uvHGvzsEofT04ITijqTED3chPrnCYxcn7NROEtkDx9byDSMlJ2qUFGC4trWuM3T8mSphOvb6rl7Iayz" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-23">
                         </div>
