create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWyuFwxsND" once="menu" id="menu2-1t">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">landing page templates</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
+<section class="engine"><a href="https://mobirise.me/h">how to create a web page for free</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
 
     
 
@@ -368,7 +382,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ukVWGYiL3g6ZCd5OnaNxg0CeixPkE6zkkChgunR7ddqiKpCRcLHBPNuIjUlLXlsr+wxH662MD/YpH6QepeTiqOk6LlrflEi7D/oNv+U4BCckm2TA/dCG/sDO2+SH8Kv/" data-form-email="true">
+                        <input type="hidden" value="hUjOz9REOo9yBpRTSaom2eVpRII0widlKjLi5kHRX1CgkdhII85V46m8G7q/nhWSHEt5mIvXqR7rNmA6ZhKL30i1oQcgHn2ap9Kug2tyXWFfOP1rCXRAXcoZ1lb/wxsm" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-22">
                         </div>
