--- a/page10.html
+++ b/page10.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWyq6tv7Ni" once="menu" id="menu2-1n">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
+<section class="engine"><a href="https://mobirise.me/i">free site creation software</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
 
   
   
@@ -219,7 +233,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XGBY+fSUc71yo92Ntq2vKsxdpkAVQHOHSJVsD4XhRlJAsC5WOGG5II7ZIcDobr12grC0AtOoNLwyFq7UiIKWacfLzZ80xdBb9jiZapLjkb3vQny6T1g9c8Bu/yyeW+7Z" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BX5WKW7OtkWLHjgyjvhl7dYqwoH//nepAg6lTyk4eZnDLrR5F9KLfJECM2k+feH6ZuWRHDvqwT2NubcfJbW94/ZeRrHqvp2P5sP04v5wEQcOUcBDhMLlpG818xjxSlqz" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -292,7 +306,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="T5JZhbQV19k0iH5J6AGJMkocQI4xKvp+qcRsU9tSh8DeItHQ8E4Bq9H2W6h5ZPoLeBJmhh/e/Mw+Exhp4dznktUiv+1sxBDq3rVCd7bqZuc6zNM/t8Ea+fIjMUCo/vsh" data-form-email="true">
+                        <input type="hidden" value="TPKyFAJBnCGxjdio5fOTOz4mn68YFbsf+RgkUMMegOYnaBFsYu2O6gd7J28lksZ+/lSVCw1hzwQus8wvKRnPwiT+SDedg/A14X4wZ/B46aySvA4Wh+ANIqFQEGdEXTcN" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2a">
                         </div>
