--- a/page7.html
+++ b/page7.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWykKO3hMV" once="menu" id="menu2-1b">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best free css templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/f">easy site creator</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -225,7 +239,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kayjjZSOTq98UrQglY4lw/iw5QW63adFU0xNYUXHl2GW0opTi2cREDhes7yw4OoY5FSHlwlBBFB5kYMER0O5JBxoOcVt4+TGIH9vgDpcmDgyqVl7yQFcsP2aviT4BNU7" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rgyCTKBjUa3TwJMioNlrS78fPTSTC/ElewHBPSIeLP6Bg0NhGNekqjhFNu3OW5u5YpNpJLuclVKjs5zcKMR+SCwI4vWZUG5ipaNxH59S5A0s2aFezOGPlaIrmlTeXsa7" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -298,7 +312,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="VDNRg7Q1f2omc0kw3ZE/S9Y6nFHJfNJILZBy0Zz4jF8fFr3ZtvhRezTUp9CQfOVFS26ihYEzIjIfG6gbm3GiaHVwDf5VH0YWhE48CxluEOVZKLVcjPuULi91DnqsYBiV" data-form-email="true">
+                        <input type="hidden" value="Z1fLXCuquJ8UV2Z4ghRpXM27PC9mJFOS67RlUy0r0BqKq9+m5lXcrOFT9SWQZ7LTvXqSsZnana2NxWrZd9CXNQVTA9yzoZZHFOwtoBMHEBzvycU1NNlYpEfsK2ZyCK1W" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
