--- a/page8.html
+++ b/page8.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWypyXbt3n" once="menu" id="menu2-1f">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/f">easy web creator</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -237,7 +251,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sOOniPPMTGyjAgMIbrKLRQhkDoiPEzb09+GEh/yP1JgCTkmplwn3c0DRLsB3iedxy/zvOVEPJdMakhyL/LvRRmaqgQZ7z3GUL3GrY6X2gAbEnyV1GR9JHwP3ry2GSGU5" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BSOBqXtseSUX0xPwoPm8SN3nY7GeKbCppT5AbAxCz+SjrxUn7O71SV9jcgqgZuiIov6/7fvhAuB0q5zAvl8Uh/DBKBj8KnwriN+yE6/AUZeGcHdta19eT6P+eY8I+UCk" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +324,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ppY2zoNqvjh/sUHhsv4lNngB802L58OYovtQkw8AcBReeZTH+iL/pB8JjzEkQSb1HpMk0GzsdwsTT0IVAYtlMhLsvCHRJ1ft10dQvu11YyLe531Ut7V6IfMjLah8VX09" data-form-email="true">
+                        <input type="hidden" value="S7r1zExy4b99i1vtOF+M7wG7KW3g6mHACRRSdxHn6isFd59X2ifBaSweBZP+5t1fWQyEvc9oJqej8ksBGN6kJ37pXS7wR5BK3XrwCTjpoAyBDw4Iq4rg09IHGxr+z649" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
