--- a/page9.html
+++ b/page9.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWypRIJwqR" once="menu" id="menu2-1j">
 
     
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/m">web design templates</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
+<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
 
   
   
@@ -220,7 +234,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="a0n+NXuxCHA2qNz9P2xZiDBm2ZwRahgpWtSGnHEhdegBgfVtisHV5voOxe9oidbz1n+bFWvqulJ68uDSqjjYzeLnhvgPS6diqLH3z370TZm8Lnk0d2oARH1u61YpKeDT" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mA1bc+ZqxDWsvWOTUWGHY6FGkb4uAild2ucH7C2mX/sAoNqxS6ATkYiej28ItfnyuvMpmMTM/OMa5MApxsn0IA4UQ18OBXRZHSpN3hfdPf+nNYOFI68Olmkvxm8TSCTL" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -293,7 +307,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="VWgAI1WMo9XKncHxcxCcNezLKY3fiwICrEcT9M2FzT70Ab7KZ+36yvB04LXpiekW5LkuptFREmYYMHvMzsYlwXEixDYaqCEsF4UigiFxmPnzQ+JkrTiEPwgErYO1iCOS" data-form-email="true">
+                        <input type="hidden" value="7oF/khmyUGlGkyoPqCP2YY/5CU6Bk/53Q8tVqj8ThVQJ7XlN4iXQaPCj+1b8+oMnu9iRlcvFX8Bm+GB8Uhl1BniqaIgyuwejj+kxEXoOvvqELxXu7FAdFFNHEZVgCDnc" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-29">
                         </div>
