--- a/page4.html
+++ b/page4.html
@@ -23,6 +23,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWyuNeck2d" once="menu" id="menu2-1u">
 
     
@@ -65,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/q">responsive website templates</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
+<section class="engine"><a href="https://mobirise.me/d">free website maker</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
 
     
 
@@ -158,7 +172,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/016.jpg" alt="Mobirise">
+                        <img src="assets/images/010.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -172,7 +186,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/027.jpg" alt="Mobirise">
+                        <img src="assets/images/021.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -229,7 +243,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="XSZXVtcwp31BxIsP9+FdaGMIgTWUKW/K8XrGWDwLnqlZ/fwv9uvHGvzsEofT04ITijqTED3chPrnCYxcn7NROEtkDx9byDSMlJ2qUFGC4trWuM3T8mSphOvb6rl7Iayz" data-form-email="true">
+                        <input type="hidden" value="ucMKsUo7gChH1Uv+IP11kUy4/zrgmFbLZa++KJ3yMAiSkno0gJWi6XACGMToxWinCFk/gYSJi65zLW4ZctH2cCwKp1s48vULRNaURiHfA8CEMfsqAsJ/ZmHNDigxfe9x" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-23">
                         </div>
