--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/f">easy site creator</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/t">amp template</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -239,7 +239,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rgyCTKBjUa3TwJMioNlrS78fPTSTC/ElewHBPSIeLP6Bg0NhGNekqjhFNu3OW5u5YpNpJLuclVKjs5zcKMR+SCwI4vWZUG5ipaNxH59S5A0s2aFezOGPlaIrmlTeXsa7" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Nl8hSoQGFCSbEXoXQYyHt8Kgi8nqBjYZIz7lcgF54ZzbFLrVxJx3d9RmjSzgPrbORT8u1tyVPoLGV1AH0k14GvmfrIrU0BnKmDp8YMVlpVcSdEsKbBB/vnUcRnKQMNVl" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -312,7 +312,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="Z1fLXCuquJ8UV2Z4ghRpXM27PC9mJFOS67RlUy0r0BqKq9+m5lXcrOFT9SWQZ7LTvXqSsZnana2NxWrZd9CXNQVTA9yzoZZHFOwtoBMHEBzvycU1NNlYpEfsK2ZyCK1W" data-form-email="true">
+                        <input type="hidden" value="wzmGgzt6KJRSSCxro/5vBred3jqwvKyNMI3Zd9ddPSDk4Af4Dv+MuwcQM4uuwunygw/qB/tYMOWvQuXmC1j85rpfsPK8TiK7BSssj8BVcqKZoZmVhg+eq+XIhwRyFANj" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
