--- a/page8.html
+++ b/page8.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/t">free amp template</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -251,7 +251,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ib7MmwgWWFHCh+ykcexG0x1z4Lnrp2iu1DGpYCjHpbj6UzVDv3V2gx1x4rMA6ixla5IrEqw1X64DExj9pL17ZJgb25oaRgF1kU58BOC24BvuG27Yf/v/xvRPF+92mZzQ" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GaEgxHvZTa4RxVxoW9iWVpEVK1ftRuKhg3QwHvbAwTCk52z8cQBqwRoTJ7qY417GTtaK60mBGty/5SzB25A+dBx4JBxSsNXVbWSSo0Fh2zXMGT+SmGFJLgnOBu1XNGA3" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -324,7 +324,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="yLHdF0ypvLrzo6MvPW8uXYMRi1YRh6rfh4qJFZzBLINP/IWpU4gG0BLAlJG8qln85beSpKONVKz5Mq56G61rQTceurv3Jq+KbuB/l6z5jBuV+KvG1F7euokF61QGJZM+" data-form-email="true">
+                        <input type="hidden" value="TY4dRBrL5fz5zqPn3qzCTG+m4pRPw6hR0bLQHrYD63QKgXplQB7CtWlMqYUMWDnB8sZaMozNyQkM7dv8s0jPig26eiV+OaQIMUH7idnuQiY3SFYa+CLB3WMGb4Ojl/SA" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
